<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddRecipeFragment">

    <ImageView
        android:id="@+id/imgView_recipe_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_select_recipe_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/unfocused"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imgView_recipe_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/recipeName"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_restaurant_name_dynamic"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_recipe_image"/>

    <EditText
        android:id="@+id/et_recipe_description"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/recipeDescription"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_description"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_recipe_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_url_information"/>

    <TextView
        android:id="@+id/tv_url_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_information"
        android:textStyle="bold"
        android:textColor="@color/gph_dark_red"
        android:textSize="15dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_recipe_description"
        app:layout_constraintBottom_toTopOf="@+id/et_recipe_video_url"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_recipe_video_url"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/recipeVideoURL"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_link"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_url_information" />

    <TextView
        android:id="@+id/tv_recipe_nutrient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodNutrient"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_recipe_video_url"/>

    <CheckBox
        android:id="@+id/cb_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_nutrient" />

    <CheckBox
        android:id="@+id/cb_lactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lactose"
        app:layout_constraintStart_toEndOf="@id/cb_gluten"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_nutrient"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_fructose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fructose"
        app:layout_constraintStart_toEndOf="@id/cb_lactose"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_nutrient"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_addRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/addRecipe"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/unfocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_lactose" />

</androidx.constraintlayout.widget.ConstraintLayout>