<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddFoodFragment">

    <ImageView
        android:id="@+id/imgView_addFoodImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_select_food_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/unfocused"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imgView_addFoodImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_newFoodName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/foodName"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_restaurant_name_dynamic"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView_addFoodImage"/>

    <EditText
        android:id="@+id/et_newFoodDescription"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/foodDescription"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_description"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newFoodName" />

    <EditText
        android:id="@+id/et_newFoodPrice"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/foodPrice"
        android:fontFamily="sans-serif-condensed"
        android:inputType = "numberDecimal"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_price"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newFoodDescription" />

    <TextView
        android:id="@+id/tv_food_nutrient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foodNutrient"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newFoodPrice"/>

    <CheckBox
        android:id="@+id/cb_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_nutrient" />

    <CheckBox
        android:id="@+id/cb_lactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lactose"
        app:layout_constraintStart_toEndOf="@id/cb_gluten"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_nutrient"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_fructose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/fructose"
        app:layout_constraintStart_toEndOf="@id/cb_lactose"
        app:layout_constraintTop_toBottomOf="@+id/tv_food_nutrient"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_addNewFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/addNewFood"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/unfocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_lactose" />

</androidx.constraintlayout.widget.ConstraintLayout>