<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/my_restaurant_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_restaurant" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/menu_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/location_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/my_restaurant_tab_viewpager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>