<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPatient">


    <TextView
        android:id="@+id/tv_welcomeNewPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/welcomeNewUser"
        android:textColor="@color/teal_700"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:hint="Name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_person_dynamic"
        android:drawablePadding="8dp"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeNewPatient" />

    <EditText
        android:id="@+id/et_signUpEmail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/round_et"
        android:drawableStart="@drawable/ic_email_dynamic"
        android:drawablePadding="8dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_password_dynamic"
        android:drawablePadding="8dp"
        android:inputType="textPassword"
        android:background="@drawable/round_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpEmail" />

    <ImageView
        android:id="@+id/img_showHide"
        style="?android:buttonBarButtonStyle"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_show_hide"
        app:layout_constraintBottom_toBottomOf="@+id/et_signUpPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_signUpPassword" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/gender"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_signUpPassword" />

    <RadioGroup
        android:id="@+id/radioGroup_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:paddingRight="10dp"
            android:text="@string/male"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/female"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_intolerant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/intolerant"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_gender" />

    <CheckBox
        android:id="@+id/cb_gluten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/gluten"
        app:layout_constraintBottom_toTopOf="@+id/spinner_patientState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_intolerant" />

    <CheckBox
        android:id="@+id/cb_lactose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/lactose"
        app:layout_constraintBottom_toTopOf="@+id/spinner_patientState"
        app:layout_constraintStart_toEndOf="@id/cb_gluten"
        app:layout_constraintTop_toBottomOf="@+id/tv_intolerant"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cb_fructose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/fructose"
        app:layout_constraintBottom_toTopOf="@+id/spinner_patientState"
        app:layout_constraintStart_toEndOf="@id/cb_lactose"
        app:layout_constraintTop_toBottomOf="@+id/tv_intolerant"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_patientState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:ems="10"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/btn_registerPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/unfocused"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_patientState" />




</androidx.constraintlayout.widget.ConstraintLayout>